# kmpos

./: .gitignore  README.md
pos-api/: README.md  mypy.ini  pyproject.toml
pos-api/src/: main.py
pos-api/src/core/: __init__.py  http.py
pos-api/src/model/: cart.py  internal.py  pos.py
pos-api/src/persistence/: __init__.py  pos.py
pos-api/src/rest/: article.py  basket.py  category.py  order.py  table.py
pos-api/src/routers/: article.py  basket.py  cart.py  category.py  internal.py  order.py  table.py
