[project]
name = "pos-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthias Rueedlinger",email = "md@rueedlinger.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "cachetools (>=6.1.0,<7.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]

[tool.poetry]
packages = [{include = "pos_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = {extras = ["toml"], version = "^7.10.2"}
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100